# landandbay

./: .env.example  FORK_AND_CUSTOMIZE.md  README.md  branding.json  docker-compose.yml  init-db.sh
backend/: README.md  pyproject.toml
backend/landandbay/: __init__.py
backend/landandbay/core/: settings.py  views.py
backend/landandbay/core/templates/: index.html
backend/landandbay/templates/: index.html
backend/sample_data/: fixtures.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/tests/integration/: AppIntegration.test.js
ssr/: server.js
ssr/app/: layout.tsx  page.tsx
terraform/: README.md  variables.tf
terraform/modules/database/: main.tf  variables.tf
