[tool.poetry]
name = "landandbay"
version = "0.1.0"
description = "Coalition Builder"
authors = ["Leila Hadj-Chikh <lhadjchikh@gmail.com>"]
license = "n"
readme = "README.md"
packages = [
    { include = "landandbay" },
    { include = "scripts" } 
]

[tool.poetry.scripts]
lint = "scripts.lint:main"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.1"
django-ninja = "^1.4.2"
dj-database-url = "^2.3.0"
gdal = "3.10.3"
whitenoise = "^6.9.0"
psycopg = "^3.2.9"
gunicorn = "^23.0.0"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.12"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "C90", "N", "B", "UP", "ANN", "A", "COM", "C4", "DTZ", "T10", "T20", "PT", "Q", "SIM", "ARG", "ERA"]
ignore = [
    "ARG001",  # Unused function argument - common in Django views/handlers
    "PT027",   # Use pytest.raises instead of unittest assertRaises - Django uses unittest
]

# Disable specific rules for certain paths
[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]  # Allow print statements in scripts directory

[tool.ruff.lint.isort]
known-first-party = ["landandbay", "campaigns", "endorsers", "legislators", "regions", "api"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"